test/parser/reject/rule-no-type-no-prod.ptk
# expected: E1203, E1200
rule foo : = ;